[package]
name = "tarussh"
version = "0.1.0"
authors = ["Jonas Großmann <jonas.github@naevius.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
rand = "0.8"

[dependencies.async-std]
version = "1.8"
features = ["attributes"]
