[package]
name = "tarussh"
version = "0.1.0"
authors = ["Jonas Großmann <jonas.github@naevius.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1.0", features = ["rt", "time", "macros", "net", "io-util"] }
rand = "0.8"
structopt = "0.3"